Text area for notes as well model update

--- a/public/index.html
+++ b/public/index.html
@@ -202,7 +202,11 @@
                     <label>Vehicle ID:</label>
                     <pre><code id="result"></code></pre>
 
-                    <video id="video" class="d-flex align-items-center mx-auto" style=""></video>
+                    <video id="video" class="d-flex align-items-center mx-auto" ></video>
+                    <br>
+                    <label>Notes:</label>
+                    <br>
+                    <textarea rows="3" id="notes" placeholder="Name, Vehicle ID, etc. comma-separated"></textarea>
                 </div>
                 <div class="footer">
                     <div class="d-flex">
