Companies now a checkbox

--- a/public/index.html
+++ b/public/index.html
@@ -129,7 +129,7 @@
         </div>
     </nav>
     <div class="tab-content" id="container">
-
+        <!-- Location Tab - Map etc.-->
         <div class="tab-pane show active" role="tabpanel" id="tab_location">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
                 <div class="content">
@@ -145,7 +145,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Classification Tab - Image, infractions and companies -->
         <div class="tab-pane" role="tabpanel" id="tab_classification">
             <div class="container-fluid">
                 <div class="content">
@@ -165,7 +165,7 @@
                         <div class="card-text">
                             <div class="row">
                                 <div class="col-sm-4 col-xs-12">
-                                    <div data-toggle="radiobuttons" id="company_list">
+                                    <div data-toggle="companybuttons" id="company_list">
 
                                     </div>
                                 </div>
@@ -189,7 +189,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Identification Tab - QRCode, notes and other optional stuff-->
         <div class="tab-pane" role="tabpanel" id="tab_identification">
             <div class="container" style="width: device-width; max-width: 400px; background-color: #ffffff;">
                 <div class="content">
