min upload image limit set

--- a/public/index.html
+++ b/public/index.html
@@ -150,7 +150,7 @@
             <div class="container-fluid">
                 <div class="content">
                     <!-- We'll transform this input into a pond -->
-                    <input type="file" class="filepond" name="filepond" data-max-file-size="10MB" data-max-files="1">
+                    <input type="file" class="filepond" name="filepond" data-max-file-size="10MB" data-max-file-size="100KB" data-max-files="1">
                     <div class="card-body low-opacity" id="infraction_div">
                         <p class="card-text">Select all parking infractions that apply:</p>
                         <div class="row">
